--- a/quote.html
+++ b/quote.html
@@ -89,7 +89,7 @@
 
           <div class="flex flex-col gap-4 mt-2">
             <div>
-              <h4 class="text-xl text-green-600 font-bold mb-1">Eco-Essentials</h4>
+              <h4 class="text-xl text-black font-bold mb-1">Eco-Essentials</h4>
               <p class="text-sm mb-2">This package is perfect for those seeking reliable, environmentally 
                 friendly landscape maintenance without breaking the bank. It focuses on the fundamental 
                 services to keep your property looking neat and tidy.</p>
@@ -101,7 +101,7 @@
                 <option value="biweekly">Biweekly</option>
               </select>
               <p class="text-md font-semibold mt-3">Starting Price: <span id="essentialsPrice">$55 per visit </span></p>
-              <button onclick="selectPackage('eco-essentials')" class="mt-3 w-full border border-green-600 text-green-600 hover:bg-green-600 hover:text-white transition rounded-full py-2 font-medium">
+              <button onclick="selectPackage('eco-essentials')" class="mt-3 w-full border border-green-400 text-green-600 hover:bg-green-400 hover:text-black transition rounded-full py-2 font-medium">
                 Select This Package
               </button>
             </div>
@@ -113,40 +113,40 @@
             <p class="text-sm font-semibold mb-2">Includes:</p>
             <ul class="space-y-2 text-sm">
               <li class="flex items-start gap-2">
-                <div class="inline-flex items-center justify-center w-5 h-5 rounded-full bg-green-600 mt-0.5 shrink-0">
-                  <svg class="w-3 h-3 text-white" fill="none" stroke="currentColor" stroke-width="3" viewBox="0 0 24 24">
+                <div class="inline-flex items-center justify-center w-5 h-5 rounded-full bg-green-400 mt-0.5 shrink-0">
+                  <svg class="w-3 h-3 text-black" fill="none" stroke="currentColor" stroke-width="3" viewBox="0 0 24 24">
                     <path stroke-linecap="round" stroke-linejoin="round" d="M5 13l4 4L19 7" />
                   </svg>
                 </div>
                 Lawn mowing
               </li>
               <li class="flex items-start gap-2">
-                <div class="inline-flex items-center justify-center w-5 h-5 rounded-full bg-green-600 mt-0.5 shrink-0">
-                  <svg class="w-3 h-3 text-white" fill="none" stroke="currentColor" stroke-width="3" viewBox="0 0 24 24">
+                <div class="inline-flex items-center justify-center w-5 h-5 rounded-full bg-green-400 mt-0.5 shrink-0">
+                  <svg class="w-3 h-3 text-black" fill="none" stroke="currentColor" stroke-width="3" viewBox="0 0 24 24">
                     <path stroke-linecap="round" stroke-linejoin="round" d="M5 13l4 4L19 7" />
                   </svg>
                 </div>
                 Edging
               </li>
               <li class="flex items-start gap-2">
-                <div class="inline-flex items-center justify-center w-5 h-5 rounded-full bg-green-600 mt-0.5 shrink-0">
-                  <svg class="w-3 h-3 text-white" fill="none" stroke="currentColor" stroke-width="3" viewBox="0 0 24 24">
+                <div class="inline-flex items-center justify-center w-5 h-5 rounded-full bg-green-400 mt-0.5 shrink-0">
+                  <svg class="w-3 h-3 text-black" fill="none" stroke="currentColor" stroke-width="3" viewBox="0 0 24 24">
                     <path stroke-linecap="round" stroke-linejoin="round" d="M5 13l4 4L19 7" />
                   </svg>
                 </div>
                 Blowing
               </li>
               <li class="flex items-start gap-2">
-                <div class="inline-flex items-center justify-center w-5 h-5 rounded-full bg-green-600 mt-0.5 shrink-0">
-                  <svg class="w-3 h-3 text-white" fill="none" stroke="currentColor" stroke-width="3" viewBox="0 0 24 24">
+                <div class="inline-flex items-center justify-center w-5 h-5 rounded-full bg-green-400 mt-0.5 shrink-0">
+                  <svg class="w-3 h-3 text-black" fill="none" stroke="currentColor" stroke-width="3" viewBox="0 0 24 24">
                     <path stroke-linecap="round" stroke-linejoin="round" d="M5 13l4 4L19 7" />
                   </svg>
                 </div>
                 Trimming
               </li>
               <li class="flex items-start gap-2">
-                <div class="inline-flex items-center justify-center w-5 h-5 rounded-full bg-green-600 mt-0.5 shrink-0">
-                  <svg class="w-3 h-3 text-white" fill="none" stroke="currentColor" stroke-width="3" viewBox="0 0 24 24">
+                <div class="inline-flex items-center justify-center w-5 h-5 rounded-full bg-green-400 mt-0.5 shrink-0">
+                  <svg class="w-3 h-3 text-black" fill="none" stroke="currentColor" stroke-width="3" viewBox="0 0 24 24">
                     <path stroke-linecap="round" stroke-linejoin="round" d="M5 13l4 4L19 7" />
                   </svg>
                 </div>
@@ -163,7 +163,7 @@
           </span>
           <div class="flex flex-col gap-4">
             <div>
-              <h4 class="text-xl text-green-600 font-bold mb-1">Eco-Care</h4>
+              <h4 class="text-xl text-black font-bold mb-1">Eco-Care</h4>
               <p class="text-sm mb-2">An ideal choice for homeowners looking for an elevated level of care, 
                 this package offers expanded services to ensure your landscape remains healthy and vibrant 
                 throughout the year.</p>
@@ -175,7 +175,7 @@
                 <option value="biweekly">Biweekly</option>
               </select>
               <p class="text-md font-semibold mt-3">Starting Price: <span id="carePrice">$65 per visit</span></p>
-              <button onclick="selectPackage('eco-care')" class="mt-3 w-full border border-green-600 text-green-600 hover:bg-green-600 hover:text-white transition rounded-full py-2 font-medium">
+              <button onclick="selectPackage('eco-care')" class="mt-3 w-full border border-green-400 text-green-600 hover:bg-green-400 hover:text-black transition rounded-full py-2 font-medium">
                 Select This Package
               </button>
             </div>
@@ -187,40 +187,40 @@
             <p class="text-sm font-semibold mb-2">Includes:</p>
             <ul class="space-y-2 text-sm">
               <li class="flex items-start gap-2">
-                <div class="inline-flex items-center justify-center w-5 h-5 rounded-full bg-green-600 mt-0.5 shrink-0">
-                  <svg class="w-3 h-3 text-white" fill="none" stroke="currentColor" stroke-width="3" viewBox="0 0 24 24">
+                <div class="inline-flex items-center justify-center w-5 h-5 rounded-full bg-green-400 mt-0.5 shrink-0">
+                  <svg class="w-3 h-3 text-black" fill="none" stroke="currentColor" stroke-width="3" viewBox="0 0 24 24">
                     <path stroke-linecap="round" stroke-linejoin="round" d="M5 13l4 4L19 7" />
                   </svg>
                 </div>
                 All Eco-Essentials services
               </li>
               <li class="flex items-start gap-2">
-                <div class="inline-flex items-center justify-center w-5 h-5 rounded-full bg-green-600 mt-0.5 shrink-0">
-                  <svg class="w-3 h-3 text-white" fill="none" stroke="currentColor" stroke-width="3" viewBox="0 0 24 24">
+                <div class="inline-flex items-center justify-center w-5 h-5 rounded-full bg-green-400 mt-0.5 shrink-0">
+                  <svg class="w-3 h-3 text-black" fill="none" stroke="currentColor" stroke-width="3" viewBox="0 0 24 24">
                     <path stroke-linecap="round" stroke-linejoin="round" d="M5 13l4 4L19 7" />
                   </svg>
                 </div>
                 Shrub & hedge pruning
               </li>
               <li class="flex items-start gap-2">
-                <div class="inline-flex items-center justify-center w-5 h-5 rounded-full bg-green-600 mt-0.5 shrink-0">
-                  <svg class="w-3 h-3 text-white" fill="none" stroke="currentColor" stroke-width="3" viewBox="0 0 24 24">
+                <div class="inline-flex items-center justify-center w-5 h-5 rounded-full bg-green-400 mt-0.5 shrink-0">
+                  <svg class="w-3 h-3 text-black" fill="none" stroke="currentColor" stroke-width="3" viewBox="0 0 24 24">
                     <path stroke-linecap="round" stroke-linejoin="round" d="M5 13l4 4L19 7" />
                   </svg>
                 </div>
                 Weed control around flowerbeds and hardscapes
               </li>
               <li class="flex items-start gap-2">
-                <div class="inline-flex items-center justify-center w-5 h-5 rounded-full bg-green-600 mt-0.5 shrink-0">
-                  <svg class="w-3 h-3 text-white" fill="none" stroke="currentColor" stroke-width="3" viewBox="0 0 24 24">
+                <div class="inline-flex items-center justify-center w-5 h-5 rounded-full bg-green-400 mt-0.5 shrink-0">
+                  <svg class="w-3 h-3 text-black" fill="none" stroke="currentColor" stroke-width="3" viewBox="0 0 24 24">
                     <path stroke-linecap="round" stroke-linejoin="round" d="M5 13l4 4L19 7" />
                   </svg>
                 </div>
                 Basic plant health check
               </li>
               <li class="flex items-start gap-2">
-                <div class="inline-flex items-center justify-center w-5 h-5 rounded-full bg-green-600 mt-0.5 shrink-0">
-                  <svg class="w-3 h-3 text-white" fill="none" stroke="currentColor" stroke-width="3" viewBox="0 0 24 24">
+                <div class="inline-flex items-center justify-center w-5 h-5 rounded-full bg-green-400 mt-0.5 shrink-0">
+                  <svg class="w-3 h-3 text-black" fill="none" stroke="currentColor" stroke-width="3" viewBox="0 0 24 24">
                     <path stroke-linecap="round" stroke-linejoin="round" d="M5 13l4 4L19 7" />
                   </svg>
                 </div>
@@ -239,7 +239,7 @@
 
           <div class="flex flex-col gap-4 mt-2">
             <div>
-              <h4 class="text-xl text-green-600 font-bold mb-1">Eco-Supreme</h4>
+              <h4 class="text-xl text-black font-bold mb-1">Eco-Supreme</h4>
               <p class="text-sm mb-2">Our premium, all-inclusive offering, the Regenerative Retreat Package provides comprehensive, 
                 worry-free landscape maintenance for those who desire a truly luxurious outdoor living experience.</p>
             </div>
@@ -250,7 +250,7 @@
                 <option value="biweekly">Biweekly</option>
               </select>
               <p class="text-md font-semibold text-black mt-3">Starting Price: <span id="supremePrice">$80 per visit</span></p>
-              <button onclick="selectPackage('eco-supreme')" class="mt-3 w-full border border-green-600 text-green-600 hover:bg-green-600 hover:text-white transition rounded-full py-2 font-medium">
+              <button onclick="selectPackage('eco-supreme')" class="mt-3 w-full border border-green-400 text-green-600 hover:bg-green-400 hover:text-black transition rounded-full py-2 font-medium">
                 Select This Package
               </button>
             </div>
@@ -262,72 +262,72 @@
             <p class="text-sm font-semibold mb-2">Includes:</p>
             <ul class="space-y-2 text-sm">
               <li class="flex items-start gap-2">
-                <div class="inline-flex items-center justify-center w-5 h-5 rounded-full bg-green-600 mt-0.5 shrink-0">
-                  <svg class="w-3 h-3 text-white" fill="none" stroke="currentColor" stroke-width="3" viewBox="0 0 24 24">
+                <div class="inline-flex items-center justify-center w-5 h-5 rounded-full bg-green-400 mt-0.5 shrink-0">
+                  <svg class="w-3 h-3 text-black" fill="none" stroke="currentColor" stroke-width="3" viewBox="0 0 24 24">
                     <path stroke-linecap="round" stroke-linejoin="round" d="M5 13l4 4L19 7" />
                   </svg>
                 </div>
                 All Eco-Essentials & Eco-Care services
               </li>
               <li class="flex items-start gap-2">
-                <div class="inline-flex items-center justify-center w-5 h-5 rounded-full bg-green-600 mt-0.5 shrink-0">
-                  <svg class="w-3 h-3 text-white" fill="none" stroke="currentColor" stroke-width="3" viewBox="0 0 24 24">
+                <div class="inline-flex items-center justify-center w-5 h-5 rounded-full bg-green-400 mt-0.5 shrink-0">
+                  <svg class="w-3 h-3 text-black" fill="none" stroke="currentColor" stroke-width="3" viewBox="0 0 24 24">
                     <path stroke-linecap="round" stroke-linejoin="round" d="M5 13l4 4L19 7" />
                   </svg>
                 </div>
                 Advanced pruning and shaping
               </li>
               <li class="flex items-start gap-2">
-                <div class="inline-flex items-center justify-center w-5 h-5 rounded-full bg-green-600 mt-0.5 shrink-0">
-                  <svg class="w-3 h-3 text-white" fill="none" stroke="currentColor" stroke-width="3" viewBox="0 0 24 24">
+                <div class="inline-flex items-center justify-center w-5 h-5 rounded-full bg-green-400 mt-0.5 shrink-0">
+                  <svg class="w-3 h-3 text-black" fill="none" stroke="currentColor" stroke-width="3" viewBox="0 0 24 24">
                     <path stroke-linecap="round" stroke-linejoin="round" d="M5 13l4 4L19 7" />
                   </svg>
                 </div>
                 Seasonal floral and plant refresh
               </li>
               <li class="flex items-start gap-2">
-                <div class="inline-flex items-center justify-center w-5 h-5 rounded-full bg-green-600 mt-0.5 shrink-0">
-                  <svg class="w-3 h-3 text-white" fill="none" stroke="currentColor" stroke-width="3" viewBox="0 0 24 24">
+                <div class="inline-flex items-center justify-center w-5 h-5 rounded-full bg-green-400 mt-0.5 shrink-0">
+                  <svg class="w-3 h-3 text-black" fill="none" stroke="currentColor" stroke-width="3" viewBox="0 0 24 24">
                     <path stroke-linecap="round" stroke-linejoin="round" d="M5 13l4 4L19 7" />
                   </svg>
                 </div>
                 Irrigation system check and adjustment
               </li>
               <li class="flex items-start gap-2">
-                <div class="inline-flex items-center justify-center w-5 h-5 rounded-full bg-green-600 mt-0.5 shrink-0">
-                  <svg class="w-3 h-3 text-white" fill="none" stroke="currentColor" stroke-width="3" viewBox="0 0 24 24">
+                <div class="inline-flex items-center justify-center w-5 h-5 rounded-full bg-green-400 mt-0.5 shrink-0">
+                  <svg class="w-3 h-3 text-black" fill="none" stroke="currentColor" stroke-width="3" viewBox="0 0 24 24">
                     <path stroke-linecap="round" stroke-linejoin="round" d="M5 13l4 4L19 7" />
                   </svg>
                 </div>
                 Fertilization (organic and eco-friendly, quarterly)
               </li>
               <li class="flex items-start gap-2">
-                <div class="inline-flex items-center justify-center w-5 h-5 rounded-full bg-green-600 mt-0.5 shrink-0">
-                  <svg class="w-3 h-3 text-white" fill="none" stroke="currentColor" stroke-width="3" viewBox="0 0 24 24">
+                <div class="inline-flex items-center justify-center w-5 h-5 rounded-full bg-green-400 mt-0.5 shrink-0">
+                  <svg class="w-3 h-3 text-black" fill="none" stroke="currentColor" stroke-width="3" viewBox="0 0 24 24">
                     <path stroke-linecap="round" stroke-linejoin="round" d="M5 13l4 4L19 7" />
                   </svg>
                 </div>
                 Pest and disease monitoring and organic treatment
               </li>
               <li class="flex items-start gap-2">
-                <div class="inline-flex items-center justify-center w-5 h-5 rounded-full bg-green-600 mt-0.5 shrink-0">
-                  <svg class="w-3 h-3 text-white" fill="none" stroke="currentColor" stroke-width="3" viewBox="0 0 24 24">
+                <div class="inline-flex items-center justify-center w-5 h-5 rounded-full bg-green-400 mt-0.5 shrink-0">
+                  <svg class="w-3 h-3 text-black" fill="none" stroke="currentColor" stroke-width="3" viewBox="0 0 24 24">
                     <path stroke-linecap="round" stroke-linejoin="round" d="M5 13l4 4L19 7" />
                   </svg>
                 </div>
                 Garden bed cultivation and mulching
               </li>
               <li class="flex items-start gap-2">
-                <div class="inline-flex items-center justify-center w-5 h-5 rounded-full bg-green-600 mt-0.5 shrink-0">
-                  <svg class="w-3 h-3 text-white" fill="none" stroke="currentColor" stroke-width="3" viewBox="0 0 24 24">
+                <div class="inline-flex items-center justify-center w-5 h-5 rounded-full bg-green-400 mt-0.5 shrink-0">
+                  <svg class="w-3 h-3 text-black" fill="none" stroke="currentColor" stroke-width="3" viewBox="0 0 24 24">
                     <path stroke-linecap="round" stroke-linejoin="round" d="M5 13l4 4L19 7" />
                   </svg>
                 </div>
                 Comprehensive weed control
               </li>
               <li class="flex items-start gap-2">
-                <div class="inline-flex items-center justify-center w-5 h-5 rounded-full bg-green-600 mt-0.5 shrink-0">
-                  <svg class="w-3 h-3 text-white" fill="none" stroke="currentColor" stroke-width="3" viewBox="0 0 24 24">
+                <div class="inline-flex items-center justify-center w-5 h-5 rounded-full bg-green-400 mt-0.5 shrink-0">
+                  <svg class="w-3 h-3 text-black" fill="none" stroke="currentColor" stroke-width="3" viewBox="0 0 24 24">
                     <path stroke-linecap="round" stroke-linejoin="round" d="M5 13l4 4L19 7" />
                   </svg>
                 </div>
@@ -344,7 +344,7 @@
     <!-- Expert Help Section -->
     <div class="mt-12 text-center">
       <p class="text-sm text-gray-600 mb-4">Not sure which plan you need? We can help.</p>
-      <a href="/contact.html">
+      <a href="/contact.html#emailform">
         <button class="bg-green-400 hover:bg-green-500 text-black font-medium px-6 py-3 rounded-full transition">
           Talk With an Expert
         </button>
