--- a/quote.html
+++ b/quote.html
@@ -17,46 +17,92 @@
 </head>
 
 <body class="bg-white font-sans overflow-x-hidden">
-  <!-- ===== Fixed Header (Responsive) ===== -->
-  <header class="fixed top-0 left-0 right-0 z-50 bg-white/90 backdrop-blur border-b">
-    <!-- spacing of buttons from edges -->
-    <div class="w-full px-3 sm:px-4 lg:px-5 [padding-left:env(safe-area-inset-left)] [padding-right:env(safe-area-inset-right)]">
-      <div class="h-14 md:h-16 flex items-center justify-between overflow-x-clip" style="padding-top: var(--safe-top)">
-        <!-- Brand -->
-        <a href="/" class="text-2xl md:text-3xl font-semibold text-green-600 hover:opacity-90 transition">
-          Green<span class="text-green-500">Spark</span>
-        </a>
+  <!-- ===== Fixed Header (Responsive) with Services ===== -->
+<header class="fixed top-0 left-0 right-0 z-50 bg-white/90 backdrop-blur border-b">
+  <div class="w-full px-3 sm:px-4 lg:px-5 [padding-left:env(safe-area-inset-left)] [padding-right:env(safe-area-inset-right)]">
+    <div class="h-14 md:h-16 flex items-center justify-between overflow-x-clip" style="padding-top: var(--safe-top)">
 
-        <!-- Desktop Nav -->
-        <nav class="hidden md:flex items-center gap-4 text-base">
-          <a href="tel:1-310-528-6134" class="text-green-600 font-medium">1-310-528-6134</a>
-          <a href="sign_in.html" class="px-4 py-2 border border-green-600 rounded-full text-green-600 hover:bg-green-50">Sign In</a>
-          <a href="/GetPricing.html" class="bg-green-400 hover:bg-green-600 text-black px-4 py-2 rounded-full">Get Your Price</a>
-          <a href="commercial.html" class="bg-green-600 hover:bg-green-700 text-white px-4 py-2 rounded-full">Commercial Services</a>
-          <a href="contact.html" class="px-4 py-2 bg-black rounded-full text-white hover:bg-green-400">Contact Us</a>
-        </nav>
+      <!-- Brand -->
+      <a href="/" class="text-2xl md:text-3xl font-semibold text-green-600 hover:opacity-90 transition">
+        Green<span class="text-green-500">Spark</span>
+      </a>
 
-        <!-- Mobile Menu Button -->
-        <button id="menuBtn" class="md:hidden inline-flex items-center justify-center p-2 rounded-lg border border-green-600 text-green-700">
-          <span class="sr-only">Open menu</span>
-          <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-            <path stroke-linecap="round" stroke-width="2" d="M4 7h16M4 12h16M4 17h16"/>
+      <!-- Desktop Nav -->
+      <nav class="hidden md:flex items-center gap-2 text-base">
+        <a href="tel:1-310-528-6134" class="text-green-600 font-medium px-2">1-310-528-6134</a>
+
+        <!-- Services (desktop dropdown) -->
+        <div class="relative group">
+          <button
+            class="inline-flex items-center gap-1 px-3 py-2 rounded-xl hover:bg-gray-50 text-gray-800 focus:outline-none focus-visible:ring-2 focus-visible:ring-green-500"
+            aria-haspopup="true" aria-expanded="false">
+            Services
+            <svg class="h-4 w-4 text-gray-500 group-hover:rotate-180 transition-transform" viewBox="0 0 20 20" fill="currentColor">
+              <path fill-rule="evenodd" d="M5.23 7.21a.75.75 0 011.06.02L10 10.94l3.71-3.71a.75.75 0 111.08 1.04l-4.25 4.25a.75.75 0 01-1.06 0L5.21 8.27a.75.75 0 01.02-1.06z" clip-rule="evenodd"/>
+            </svg>
+          </button>
+          <div
+            class="invisible opacity-0 translate-y-2 group-hover:visible group-hover:opacity-100 group-hover:translate-y-0 focus-within:visible focus-within:opacity-100 focus-within:translate-y-0 transition-all
+                   absolute left-0 mt-2 w-72 rounded-2xl border bg-white shadow-lg p-2">
+            <a href="/services/turf" class="block px-3 py-2 rounded-xl hover:bg-gray-50 text-gray-800">Turf</a>
+            <a href="/services/landscape-design" class="block px-3 py-2 rounded-xl hover:bg-gray-50 text-gray-800">Landscape Design</a>
+            <a href="/services/sprinkler-installation" class="block px-3 py-2 rounded-xl hover:bg-gray-50 text-gray-800">Sprinkler Installation</a>
+            <a href="/services/seasonal-services" class="block px-3 py-2 rounded-xl hover:bg-gray-50 text-gray-800">Seasonal Services</a>
+            <a href="/services/sod-seeding" class="block px-3 py-2 rounded-xl hover:bg-gray-50 text-gray-800">Sod &amp; Seeding</a>
+            <a href="/services/lawn-maintenance" class="block px-3 py-2 rounded-xl hover:bg-gray-50 text-gray-800">Lawn Maintenance</a>
+          </div>
+        </div>
+
+        <!-- Original buttons/links preserved -->
+        <a href="sign_in.html" class="px-4 py-2 border border-green-600 rounded-full text-green-600 hover:bg-green-50">Sign In</a>
+        <a href="/GetPricing.html" class="bg-green-400 hover:bg-green-600 text-black px-4 py-2 rounded-full">Get Your Price</a>
+        <a href="commercial.html" class="bg-green-600 hover:bg-green-700 text-white px-4 py-2 rounded-full">Commercial Services</a>
+        <a href="contact.html" class="px-4 py-2 bg-black rounded-full text-white hover:bg-green-400">Contact Us</a>
+      </nav>
+
+      <!-- Mobile Menu Button -->
+      <button id="menuBtn" class="md:hidden inline-flex items-center justify-center p-2 rounded-lg border border-green-600 text-green-700">
+        <span class="sr-only">Open menu</span>
+        <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+          <path stroke-linecap="round" stroke-width="2" d="M4 7h16M4 12h16M4 17h16"/>
+        </svg>
+      </button>
+    </div>
+  </div>
+
+  <!-- Mobile Drawer -->
+  <div id="mobileNav" class="md:hidden hidden border-t bg-white">
+    <div class="max-w-7xl mx-auto px-4 py-3 flex flex-col gap-3">
+
+      <!-- Services (mobile accordion) -->
+      <div class="border rounded-xl">
+        <button
+          class="w-full flex items-center justify-between px-3 py-3 text-left rounded-xl"
+          data-accordion-trigger aria-expanded="false">
+          <span class="text-gray-900 font-medium">Services</span>
+          <svg class="h-5 w-5 text-gray-500 transition-transform" viewBox="0 0 20 20" fill="currentColor">
+            <path fill-rule="evenodd" d="M5.23 7.21a.75.75 0 011.06.02L10 10.94l3.71-3.71a.75.75 0 111.08 1.04l-4.25 4.25a.75.75 0 01-1.06 0L5.21 8.27a.75.75 0 01.02-1.06z" clip-rule="evenodd"/>
           </svg>
         </button>
+        <div class="hidden pb-2" data-accordion-panel>
+          <a href="/services/turf" class="block px-4 py-2 rounded-lg hover:bg-gray-50">Turf</a>
+          <a href="/services/landscape-design" class="block px-4 py-2 rounded-lg hover:bg-gray-50">Landscape Design</a>
+          <a href="/services/sprinkler-installation" class="block px-4 py-2 rounded-lg hover:bg-gray-50">Sprinkler Installation</a>
+          <a href="/services/seasonal-services" class="block px-4 py-2 rounded-lg hover:bg-gray-50">Seasonal Services</a>
+          <a href="/services/sod-seeding" class="block px-4 py-2 rounded-lg hover:bg-gray-50">Sod &amp; Seeding</a>
+          <a href="/services/lawn-maintenance" class="block px-4 py-2 rounded-lg hover:bg-gray-50">Lawn Maintenance</a>
+        </div>
       </div>
-    </div>
 
-    <!-- Mobile Drawer -->
-    <div id="mobileNav" class="md:hidden hidden border-t bg-white">
-      <div class="max-w-7xl mx-auto px-4 py-3 flex flex-col gap-3">
-        <a href="tel:1-310-528-6134" class="text-green-700 font-medium">1-310-528-6134</a>
-        <a href="sign_in.html" class="px-4 py-2 border border-green-600 rounded-full text-green-700 text-center">Sign In</a>
-        <a href="/GetPricing.html" class="bg-green-400 hover:bg-green-500 text-black px-4 py-2 rounded-full text-center">Get Your Price</a>
-        <a href="commercial.html" class="bg-green-600 hover:bg-green-700 text-white px-4 py-2 rounded-full text-center">Commercial Services</a>
-        <a href="contact.html" class="px-4 py-2 bg-black rounded-full text-white hover:bg-green-400 text-center">Contact Us</a>
-      </div>
+      <!-- Original mobile links -->
+      <a href="tel:1-310-528-6134" class="text-green-700 font-medium">1-310-528-6134</a>
+      <a href="sign_in.html" class="px-4 py-2 border border-green-600 rounded-full text-green-700 text-center">Sign In</a>
+      <a href="/GetPricing.html" class="bg-green-400 hover:bg-green-500 text-black px-4 py-2 rounded-full text-center">Get Your Price</a>
+      <a href="commercial.html" class="bg-green-600 hover:bg-green-700 text-white px-4 py-2 rounded-full text-center">Commercial Services</a>
+      <a href="contact.html" class="px-4 py-2 bg-black rounded-full text-white hover:bg-green-400 text-center">Contact Us</a>
     </div>
-  </header>
+  </div>
+</header>
 
   <!-- Push content below fixed header (matches h-14 / h-16) -->
   <div class="pt-[3.5rem] md:pt-16"></div>
@@ -536,6 +582,23 @@
     );
   })();
 </script>
+<script>
+  // Services accordion in mobile drawer
+  (function () {
+    const triggers = document.querySelectorAll('[data-accordion-trigger]');
+    triggers.forEach((t) => {
+      const panel = t.parentElement.querySelector('[data-accordion-panel]');
+      const icon = t.querySelector('svg');
+      t.addEventListener('click', () => {
+        const open = !panel.classList.contains('hidden');
+        panel.classList.toggle('hidden', open);
+        icon.style.transform = open ? '' : 'rotate(180deg)';
+        t.setAttribute('aria-expanded', String(!open));
+      });
+    });
+  })();
+</script>
+
 
 
 </body>
