--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
           <div
             class="invisible opacity-0 translate-y-2 group-hover:visible group-hover:opacity-100 group-hover:translate-y-0 focus-within:visible focus-within:opacity-100 focus-within:translate-y-0 transition-all
                    absolute left-0 mt-2 w-72 rounded-2xl border bg-white shadow-lg p-2">
-            <a href="/services/turf" class="block px-3 py-2 rounded-xl hover:bg-gray-50 text-gray-800">Turf</a>
+            <a href="turf.html" class="block px-3 py-2 rounded-xl hover:bg-gray-50 text-gray-800">Turf</a>
             <a href="/services/landscape-design" class="block px-3 py-2 rounded-xl hover:bg-gray-50 text-gray-800">Landscape Design</a>
             <a href="/services/sprinkler-installation" class="block px-3 py-2 rounded-xl hover:bg-gray-50 text-gray-800">Sprinkler Installation</a>
             <a href="/services/seasonal-services" class="block px-3 py-2 rounded-xl hover:bg-gray-50 text-gray-800">Seasonal Services</a>
@@ -520,7 +520,7 @@
     setInterval(goToNextSlide, 8000);
     window.addEventListener('resize', () => goToSlide(currentSlide));
   </script>
-  
+
   <script>
     // Services accordion in mobile drawer
     (function () {
