--- a/schedule.html
+++ b/schedule.html
@@ -38,7 +38,7 @@
           <div
             class="invisible opacity-0 translate-y-2 group-hover:visible group-hover:opacity-100 group-hover:translate-y-0 focus-within:visible focus-within:opacity-100 focus-within:translate-y-0 transition-all
                    absolute left-0 mt-2 w-72 rounded-2xl border bg-white shadow-lg p-2">
-            <a href="/services/turf" class="block px-3 py-2 rounded-xl hover:bg-gray-50 text-gray-800">Turf</a>
+            <a href="turf.html" class="block px-3 py-2 rounded-xl hover:bg-gray-50 text-gray-800">Turf</a>
             <a href="/services/landscape-design" class="block px-3 py-2 rounded-xl hover:bg-gray-50 text-gray-800">Landscape Design</a>
             <a href="/services/sprinkler-installation" class="block px-3 py-2 rounded-xl hover:bg-gray-50 text-gray-800">Sprinkler Installation</a>
             <a href="/services/seasonal-services" class="block px-3 py-2 rounded-xl hover:bg-gray-50 text-gray-800">Seasonal Services</a>
@@ -79,7 +79,7 @@
           </svg>
         </button>
         <div class="hidden pb-2" data-accordion-panel>
-          <a href="/services/turf" class="block px-4 py-2 rounded-lg hover:bg-gray-50">Turf</a>
+          <a href="turf.html" class="block px-4 py-2 rounded-lg hover:bg-gray-50">Turf</a>
           <a href="/services/landscape-design" class="block px-4 py-2 rounded-lg hover:bg-gray-50">Landscape Design</a>
           <a href="/services/sprinkler-installation" class="block px-4 py-2 rounded-lg hover:bg-gray-50">Sprinkler Installation</a>
           <a href="/services/seasonal-services" class="block px-4 py-2 rounded-lg hover:bg-gray-50">Seasonal Services</a>
